@startuml
title Class Diagram: Registration (UC01)

' Controller

class AuthController {
    - authService : AuthService
    + register(dto: RegisterRequestDTO) : ResponseEntity<RegisterResponseDTO>
    + verifyEmail(token: String) : ResponseEntity<Boolean>
    + resendVerification(dto: ResendVerificationEmailRequestDTO) : ResponseEntity<MessageResponseDTO>
}

'Service

interface AuthService <<interface>> {
    + registerNewAccount(dto: RegisterRequestDTO) : RegisterResponseDTO
    + verifyEmail(token: String) : Boolean
    + resendVerificationEmail(dto: ResendVerificationEmailRequestDTO) : MessageResponseDTO
}

class AuthServiceImpl {
    - userRepository : UserRepository
    - emailService : EmailService
    - passwordEncoder : PasswordEncoder
    - passwordResetTokenRepository : PasswordResetTokenRepository
    - tokenRepository : TokenRepository
    - refreshTokenRepository : RefreshTokenRepository
    - jwtService : JwtService
    + registerNewAccount(dto: RegisterRequestDTO) : RegisterResponseDTO
    + verifyEmail(token: String) : Boolean
    + resendVerificationEmail(dto: ResendVerificationEmailRequestDTO) : MessageResponseDTO
    - validateRegisterInfo(dto: RegisterRequestDTO) : void
    - createVerificationToken(user: User) : String
    - capitalizeName(name: String) : String
}

interface EmailService <<interface>> {
    + sendVerificationEmail(to: String, verificationToken: String) : void
}

class EmailServiceImpl {
    + sendVerificationEmail(to: String, verificationToken: String) : void
}

' Repository

interface UserRepository <<interface>> {
    + existsByEmail(email: String) : boolean
    + existsByPhone(phone: String) : boolean
    + findByVerificationToken(verificationToken: String) : Optional<User>
    + findByEmail(email: String) : Optional<User>
    + save(entity: S) : <S extends T> S
}


' DTO

class RegisterRequestDTO {
    - fullName : String
    - phone : String
    - email : String
    - password : String
    - confirmPassword : String
}

class RegisterResponseDTO {
    - userId : Long
    - fullName : String
    - email : String
    - status : UserStatus
    - message : String
}

class ResendVerificationEmailRequestDTO {
    - email : String
}

class MessageResponseDTO {
    - message : String
}

' Entity

class User {
    - id : Long
    - fullName : String
    - phone : String
    - email : String
    - password : String
    - address : String
    - status : UserStatus
    - verificationToken : String
    - verificationTokenExpiryDate : Instant
    - role : Role
    - emailVerified : boolean
    - pendingEmail : String
    - twoFactorEnabled : boolean
}

' Relationships

' Class implement Interface
AuthServiceImpl ..|> AuthService
EmailServiceImpl ..|> EmailService

' Dependency Injection
AuthController --> AuthService : - authService
AuthServiceImpl --> UserRepository : - userRepository
AuthServiceImpl --> EmailService : - emailService

' Object Usage
AuthController ..> RegisterRequestDTO : <<uses>>
AuthController ..> RegisterResponseDTO : <<returns>>

AuthController ..> ResendVerificationEmailRequestDTO : <<uses>>
AuthController ..> MessageResponseDTO : <<returns>>

AuthServiceImpl ..> RegisterRequestDTO : <<uses>>
AuthServiceImpl ..> RegisterResponseDTO : <<creates>>

AuthServiceImpl ..> ResendVerificationEmailRequestDTO : <<uses>>
AuthServiceImpl ..> User : <<creates>>
UserRepository ..> User : <<manages>>
@enduml